domain test server update
