# vts_server/app/api/api.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info: 
-  title: WebRTC API
-  description: Test WebRTC API with express
+  title: Test API
+  description: Test User API with express
   version: 1.0 
   contact: 
     email: ykim5470@vreducation.kr
@@ -95,17 +95,15 @@ paths:
   #                       CreatedAt:
   #                         type: string
   #             example: [{RoomId: ba11a782-c2bf-403c-9902-1794f5779ecb, setConfig: [{Title: test, Host: host, Thumbnail: uploads/GUIDE/streaming/live/thumbnailSource/xxxx.png, RoomCategory: 'living', CreatedAt: '2022-04-12T04:20:58:000Z'}]}]
-  #         400:
-  #           description: User Error (Invalid Request)
   /userInfo:
     get:
       summary: 사용자 정보 반환
-      responses: 
+      responses:
         200:
           description: SUCCESS
           schema:
-            type: array
-            items:
+            type: object
+            properties:
               User:
                 type: string
               Role:
@@ -114,16 +112,61 @@ paths:
                 type: string
               Id:
                 type: string
-            example: [User: user1, Role: user, Msg: 'Hello World', Id: '0d953939-b6fc-4e4a-a322-421f49c5b207']
+            example: {User: user1, Role: user, Msg: 'Hello World', id: '1'}
 
 
   /registerUserInfo:
     post:
       summary: 사용자 정보 등록
+      parameters:
+        - in: body
+          name: userInfo
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              role:
+                type: string
+              message:
+                type: string
       responses:
-        200:
-          description: SUCCESS
-          
+        201:
+          description: Created
 
 
+  /updateUserInfo:
+    put:
+      summary: 사용자 정보 수정
+      parameters:
+        - in: body
+          name: userInfo
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              role:
+                type: string
+              message:
+                type: string
+      responses:
+        201:
+          description: Updated
 
+  /deleteUserInfo:
+    delete:
+      summary: 사용자 정보 수정
+      parameters:
+        - in: body
+          name: userInfo
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+      responses:
+        201:
+          description: Deleted
