# vts_server/app/src/apis/index.js
@@ -7,7 +7,7 @@ const router = express.Router()
 const liveThumbnailMulterSet = require('../middle/liveThumbnailMulter')
 const recResourceUpload = require('../middle/recUploadMulter')
 const fileSizeFormatter = require('../helpers/fileUploaderController')
-
+const testUpload = require('../middle/testUpload')
 const Models = require('../../../models')
 
 
@@ -114,6 +114,22 @@ router.post('/roomCreate', liveThumbnailMulterSet.single('thumbnail'), async (re
 })
 
 
+router.post('/createChatLog', async(req,res) =>{
+ try{
+	//console.log(req.app.get('io'))
+	//console.log('채팅 생성 요청 받음')
+	const {RoomId, User, Text} = req.body
+	await Models.ChannelChatLog.create({
+		RoomId: RoomId,
+		User: User,
+		Text: Text
+	})
+	res.status(200).json('Chat log added')
+	}catch(err){
+	res.status(400).json(err)}
+ })
+
+
 router.post('/recordMediaUpload',recResourceUpload.array('resources',  2), async(req,res)=>{
   try{
     const {roomId, title, host, roomCategory} = req.body
@@ -163,38 +179,84 @@ router.post('/recordMediaUpload',recResourceUpload.array('resources',  2), async
 /**
  * 인터뷰 과제 
  */
-router.get('userInfo', async(req,res)=>{
+router.get('/userInfo', async(req,res)=>{
   let userList = await Models.User.findAll({
-    attributes: ['User', 'Role', 'Msg', 'Id']
+    attributes: ['User', 'Role', 'Msg', 'id']
   })
+	console.log('get 요청')
   return res.status(200).json(userList)
 })
 
-router.post('registerUserInfo', async(req,res)=>{
-  const [name, role, message] = req.body
+router.post('/registerUserInfo', async(req,res)=>{
+  const {name, role, message} = req.body
   await Models.User.create({
     User: name,
     Role: role, 
     Msg: message
   })
+	console.log('post 요청')
   return res.status(200).json('User Information Registered Successfully!')
 })
 
-router.put('updateUserInfo', async(req,res) =>{
-  const [id, name, role, message] = req.body
+router.put('/updateUserInfo', async(req,res) =>{
+  const {id, name, role, message} = req.body
   await Models.User.update(
    {User: name, Role: role, Msg: message},
-   {where: {Id: id}}
+   {where: {id: id}}
   )
+	console.log('put 요청')
   return res.status(200).json('User Information Updated Successfully!')
 })
 
-router.delete('deleteUserInfo', async(req,res)=>{
-  const [id] = req.body
+router.delete('/deleteUserInfo', async(req,res)=>{
+  const {id} = req.body
     await Models.User.destroy({
-    where: {Id: id}
+    where: {id: id}
   })
+	console.log('delete 요청')
   return res.status(200).json('User Information Deleted Successfully!')
+})
+
+/**
+ * 인터뷰 과제2 
+ */
+router.get('/contents', async(req,res)=>{
+  // let imagePath = 
+  let roomConfig = await Models.Room.findAll({
+    attributes: ['id', 'Image', 'Room', 'createdAt', 'updatedAt']
+  })
+  return res.status(200).json(roomConfig)
+})
+
+router.post('/createContent',testUpload.single('image'),async(req,res)=>{
+  const {room} = req.body
+  const {filename} = req.file
+
+  console.log(req.file)
+  console.log(req.body)
+  await Models.Room.create({
+    Image: filename,
+    Room: room
+  })
+  return res.status(200).json('Content Created Successfully!')
+})
+
+router.put('/updateContent', testUpload.single('image'),async(req,res)=>{
+  const {id, room} = req.body
+  const {filename} = req.file
+  await Models.Room.update({
+    Image: filename, Room: room},
+    {where: {id: id}}
+  )
+  return res.status(200).json('Content Information Updated Successfully!')
+})
+
+router.delete('/deleteContent', async(req,res)=>{
+  const {id} = req.body
+  await Models.Room.destroy({
+    where: {id: id}
+  })
+  return res.status(200).json('Content Information Deleted Successfully!')
 })
 
 module.exports = router
